test/subjects/errors/simple_neg_break.php
<?php

	break -2; // { phc-error: Cannot break/continue 1 levels }

?>
